# ReadMpuDev_with_RTIMULib

./: README.md  ReadMpuDev.cpp  ReadMpuDev.h  testmpu9250.sln  testmpuDev.cpp
rtimulib_for_raspberry/: README.md  RTIMULib.lib
testmpu9250/: CMakeLists.txt  Makefile  ReadMpu9250.cpp  ReadMpu9250.h  ReadMpuDev.cpp  ReadMpuDev.h  debug.mak  debug.mak.old  gcc_Debug.h  gcc_Release.h  myMath.cpp  myMath.h  release.mak  testmpu9250-Debug.vgdbsettings  testmpu9250-Release.vgdbsettings  testmpu9250.cpp  testmpu9250.vcxproj  testmpu9250.vcxproj.filters  testmpuDev.cpp
testmpu9250/cmake_with_pre_compiled_lib/: CMakeLists.txt  README.md
